2005-09-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_increment_stamp):
	Removed cache clear that was useless and highly inefficient.
	N#17314

2005-09-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c:
	* gtk/gtktextview.c: Instead of 'hide' use 'unmap' to hide the IM so
	that it works also when parent gets hidden.
	N#16761

2005-09-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_window_visibility_notify_event): Close the
	menu if it overlaps even partially with non-menu/message windows. Also
	removed a check to make only root menu close the menu, since the root
	menu doesn't receive partial visibility notification again once a
	submenu has already partially obscured it.
	N#18455

2005-09-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_hide):
	* gtk/gtktextview.c (gtk_text_view_hide): Override the hide virtual
	function to hide the input method as well.
	N#16761

2005-09-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_row_changed): Added validity check
	before using cursor row reference.
	N#18433

2005-09-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_enter_notify, gtk_widget_leave_notify):
	Don't call gtk_widget_activate() handler, which are about focus
	handling.
	N#11711

2005-09-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwindow.c (gtk_window_focus_weak_notify): When
	prev_focus_widget gets destroyed and we recieve the destroy
	notification, make sure that it gets changed or set to NULL.
	N#16744

2005-09-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Implement global IM module runtime switching using
	"gtk-global-immodule" root window property.

	* gtk/Makefile.am:
	* gtk/maemo-gtk-im-switch.c: Add program to set the root window
	property from command line.
	* gtk/gtkimmulticontext.h (GtkIMMulticontext::context_id): remove